// Vitest Snapshot v1

exports[`Navbar > Navbar baseVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-navbar"
    >
      <div
        class="t-navbar__back"
      >
        <span
          class="t-navbar__back--arrow"
        >
          <svg
            class="t-icon t-icon-chevron-left"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
        
      </div>
      <div
        class="t-navbar__text"
      >
        
         界面标题 
        
      </div>
      <div
        class="t-navbar__right"
      >
        
        
        <i
          class="t-navbar__right--more"
        >
          <svg
            class="icon"
            height="24"
            p-id="2091"
            t="1614321969302"
            version="1.1"
            viewBox="0 0 1024 1024"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 449.749333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m-318.805333-1.109333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m638.677333 0a64 64 0 1 1 0 128 64 64 0 0 1 0-128z"
              fill="#444444"
              p-id="2092"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar eventVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-navbar"
    >
      <div
        class="t-navbar__back"
      >
        <span
          class="t-navbar__back--arrow"
        >
          <svg
            class="t-icon t-icon-chevron-left"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
        <t-icon
          name="close"
        />
        
      </div>
      <div
        class="t-navbar__text"
      >
        
         界面标题 
        
      </div>
      <div
        class="t-navbar__right"
      >
        
        
        <i
          class="t-navbar__right--more"
        >
          <svg
            class="icon"
            height="24"
            p-id="2091"
            t="1614321969302"
            version="1.1"
            viewBox="0 0 1024 1024"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 449.749333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m-318.805333-1.109333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m638.677333 0a64 64 0 1 1 0 128 64 64 0 0 1 0-128z"
              fill="#444444"
              p-id="2092"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar iconVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-navbar"
    >
      <div
        class="t-navbar__back"
      >
        <span
          class="t-navbar__back--arrow"
        >
          <svg
            class="t-icon t-icon-chevron-left"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        
        
      </div>
      <div
        class="t-navbar__text"
      >
        
         导航栏 - 带icon 
        
      </div>
      <div
        class="t-navbar__right"
      >
        
        <svg
          class="t-icon t-icon-sound"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4 11l4.24 2.55a.5.5 0 00.76-.43V2.88a.5.5 0 00-.76-.43L4 5H2.1a.6.6 0 00-.6.6v4.8c0 .33.27.6.6.6H4zm1-5.43l3-1.8v8.46l-3-1.8V5.57zM4 10H2.5V6H4v4zM13.52 5.73a6 6 0 00-1.4-1.95l.68-.73c.7.65 1.25 1.42 1.63 2.27a6.6 6.6 0 01-1.63 7.63l-.68-.73a6 6 0 001.4-1.95 5.6 5.6 0 000-4.54z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M11.5 8c0-.87-.36-1.75-1.07-2.45l.7-.72c.9.88 1.37 2.02 1.37 3.17 0 1.16-.48 2.29-1.38 3.17l-.7-.72A3.44 3.44 0 0011.5 8z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        <i
          class="t-navbar__right--more"
        >
          <svg
            class="icon"
            height="24"
            p-id="2091"
            t="1614321969302"
            version="1.1"
            viewBox="0 0 1024 1024"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 449.749333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m-318.805333-1.109333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m638.677333 0a64 64 0 1 1 0 128 64 64 0 0 1 0-128z"
              fill="#444444"
              p-id="2092"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar mobileVue demo works fine 1`] = `
<div
  class="t-navbar-base-demo"
  data-v-16defdf7=""
>
  <p
    class="divide-line"
    data-v-16defdf7=""
  />
  <div
    class="t-navbar"
    data-v-16defdf7=""
  >
    <div
      class="t-navbar__back"
    >
      <span
        class="t-navbar__back--arrow"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      
      
    </div>
    <div
      class="t-navbar__text"
    >
      
      界面标题
      
    </div>
    <div
      class="t-navbar__right"
    >
      
      
      <!--v-if-->
    </div>
  </div>
  <p
    class="divide-line"
    data-v-16defdf7=""
  />
  <div
    class="t-navbar"
    data-v-16defdf7=""
  >
    <div
      class="t-navbar__back"
    >
      <span
        class="t-navbar__back--arrow"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      
      <svg
        class="t-icon t-icon-close"
        data-v-16defdf7=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-close"
        />
      </svg>
      
    </div>
    <div
      class="t-navbar__text"
    >
      
       界面标题 
      
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-app"
        data-v-16defdf7=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-app"
        />
      </svg>
      
      <!--v-if-->
    </div>
  </div>
  <p
    class="divide-line"
    data-v-16defdf7=""
  />
  <div
    class="t-navbar"
    data-v-16defdf7=""
  >
    <div
      class="t-navbar__back"
    >
      <span
        class="t-navbar__back--arrow"
      >
        <svg
          class="t-icon t-icon-chevron-left"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      
      
    </div>
    <div
      class="t-navbar__text"
    >
      
       界面标题 
      
    </div>
    <div
      class="t-navbar__right"
    >
      
      <svg
        class="t-icon t-icon-app"
        data-v-16defdf7=""
        style="font-size: 24px;"
      >
        <use
          href="#t-icon-app"
        />
      </svg>
      
      <i
        class="t-navbar__right--more"
      >
        <svg
          class="icon"
          height="24"
          p-id="2091"
          t="1614321969302"
          version="1.1"
          viewBox="0 0 1024 1024"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 449.749333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m-318.805333-1.109333a64 64 0 1 1 0 128 64 64 0 0 1 0-128z m638.677333 0a64 64 0 1 1 0 128 64 64 0 0 1 0-128z"
            fill="#444444"
            p-id="2092"
          />
        </svg>
      </i>
    </div>
  </div>
</div>
`;
